--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ script:
   - wget -qO- "https://cmake.org/files/v3.12/cmake-3.12.4-Linux-x86_64.tar.gz" | tar xz -C /home/travis/opt/ &> /dev/null
   - export CMAKE_BIN=$(echo /home/travis/opt/cmake-*/bin/cmake)
   - export CTEST_BIN=$(echo /home/travis/opt/cmake-*/bin/ctest)
+  - find / -path "*/include/c++/v1" 2> /dev/null || true
   - |
     mkdir build
     cd build
