--- a/examples/ant/CMakeLists.txt
+++ b/examples/ant/CMakeLists.txt
@@ -11,10 +11,10 @@ if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
   set(warning_flags "")
   set(default_compiler_flags "")
 elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
-  set(warning_flags -Wall -Wextra -pedantic -Werror)
+  set(warning_flags -Wall -Wextra -pedantic)
   set(default_compiler_flags -march=native)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  set(warning_flags -Wall -Wextra -pedantic -Werror -Wno-gnu-string-literal-operator-template)
+  set(warning_flags -Wall -Wextra -pedantic -Wno-gnu-string-literal-operator-template)
   set(default_compiler_flags -march=native)
 endif()
 
