--- a/appveyor.yml
+++ b/appveyor.yml
@@ -24,4 +24,4 @@ build_script:
 test_script:
 #  - cmake --build . --target make_tree_benchmark
 #  - C:\projects\gpm\examples\ant\Debug\generate_tree_for_benchmark.exe
-#  - ctest --output-on-failure -VV -C Debug .
+  - ctest --output-on-failure -VV -C Debug .
