--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ project(gpm VERSION 0.1.0 LANGUAGES CXX)
 
 
 include("pmm.cmake")
-pmm(VCPKG REVISION 2019.08 REQUIRES fmt spdlog boost)
+pmm(VERBOSE VCPKG REVISION 2019.08 REQUIRES fmt spdlog boost catch2 benchmark)
 
 include("cmake/CompilerSettings.cmake")
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
